--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <!-- MDB -->
     <link rel="stylesheet" href="css/mdb.min.css" />
     <link rel="stylesheet" href="css/style.css">
+
+    
   </head>
   <body>
     <!-- Navbar -->
@@ -323,6 +325,62 @@
     </div>
   </div>
 </section>
+
+
+<div class="seccion-preguntas-frecuentas">
+  <div class="preguntas-frecuentes">
+    <div class="accordion accordion-borderless" id="accordionFlushExampleX">
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="flush-headingOneX">
+          <button class="accordion-button" type="button" data-mdb-toggle="collapse"
+            data-mdb-target="#flush-collapseOneX" aria-expanded="true" aria-controls="flush-collapseOneX">
+            ¿Cuáles son los servicios que ofrece su clínica?
+          </button>
+        </h2>
+        <div id="flush-collapseOneX" class="accordion-collapse collapse show"
+          aria-labelledby="flush-headingOneX" data-mdb-parent="#accordionFlushExampleX">
+          <div class="accordion-body">
+            En nuestra clínica ofrecemos una amplia gama de servicios médicos, incluyendo consultas generales, especialidades médicas, exámenes de laboratorio, diagnóstico por imágenes, cirugías menores y mucho más. Para obtener una lista completa de nuestros servicios, te invitamos a visitar nuestra página web o comunicarte con nosotros.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="flush-headingTwoX">
+          <button class="accordion-button collapsed" type="button" data-mdb-toggle="collapse"
+            data-mdb-target="#flush-collapseTwoX" aria-expanded="false" aria-controls="flush-collapseTwoX">
+            ¿Necesito agendar una cita para visitar la clínica?
+          </button>
+        </h2>
+        <div id="flush-collapseTwoX" class="accordion-collapse collapse" aria-labelledby="flush-headingTwoX"
+          data-mdb-parent="#accordionFlushExampleX">
+          <div class="accordion-body">
+            Sí, para brindarte una atención personalizada y reducir los tiempos de espera, te recomendamos agendar una cita previa. Puedes hacerlo llamándonos al [número de teléfono] o a través de nuestra página web. Si tienes una emergencia médica, te atenderemos de inmediato, sin necesidad de una cita.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="flush-headingThreeX">
+          <button class="accordion-button collapsed" type="button" data-mdb-toggle="collapse"
+            data-mdb-target="#flush-collapseThreeX" aria-expanded="false" aria-controls="flush-collapseThreeX">
+            ¿Aceptan seguro médico?
+          </button>
+        </h2>
+        <div id="flush-collapseThreeX" class="accordion-collapse collapse" aria-labelledby="flush-headingThreeX"
+          data-mdb-parent="#accordionFlushExampleX">
+          <div class="accordion-body">
+            Sí, aceptamos la mayoría de los seguros médicos. Te recomendamos comunicarte con nuestro personal de atención al paciente para verificar si tu seguro es aceptado y para obtener más información sobre los requisitos y coberturas.
+          </div>
+        </div>
+      </div>
+    </div>
+    
+  </div>
+  
+</div>
+
+
+
+
 
 <div class="flotter">
     <!-- Footer -->
